force-app/main/default/objects/ssot__AssetMilestone__dlm/fields/ssot__AssetId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssetId__c</fullName>
    <label>Asset</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssetId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>