force-app/main/default/objects/ssot__AssetMilestone__dlm/fields/ssot__ExpiredDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ExpiredDate__c</fullName>
    <label>Expired Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ExpiredDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>