force-app/main/default/objects/ssot__AssetMilestone__dlm/fields/ssot__IsExpired__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsExpired__c</fullName>
    <label>Expired</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsExpired</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>