force-app/main/default/objects/ssot__AssetMilestone__dlm/fields/ssot__StageCommentText__c.field-meta.xml
<CustomField>
    <fullName>ssot__StageCommentText__c</fullName>
    <label>Stage Comment</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>StageCommentText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>